--- a/docs/post/2025-01-02.md
+++ b/docs/post/2025-01-02.md
@@ -1,1 +1,15 @@
 ![](https://i.imgur.com/nSLvYOH.png)
+---
+![|500](https://i.imgur.com/y88o5B9.png)
+## Day 2
+
+Sự kiên trì là một điều khó khăn. không phải do bạn không đủ nghị lực để làm một việc gì đó. Mà bạn không có đủ một động lực- điểm đến- khi mong cầu không đủ lớn để bạn vượt qua những ngày mệt mỏi, bận rộn, deadline, áp lực cuộc sống. bạn dễ dàng để cho ngày hôm nay trôi qua, một ngày trôi qua với việc KHÔNG LÀM GÌ vẫn dễ dàng hơn là cố gắng bằng mọi cách ==hoàn thành tối thiểu  mục tiêu==.
+
+Mình cũng sợ mình nói rồi không làm được-Mỗi lần nói mà không làm-> thì vô tình đã làm giảm sự tự trọng của bản thân mà qua năm tháng bạn sẽ thiếu đi sự tự tin. Sự tự tin rằng mình có thể làm được khi mình nói là mình làm được. Sự tự tin- hay cái tôi- phải được trui rèn trong những thời khắc khó khăn của cuộc sống.
+
+Nếu bạn đánh rơi ngày hôm nay, quên chưa học tập, chưa hoàn thành mục tiêu. vậy hãy tiếp tục vào ngày mai luôn nhé, nhớ cho mình sự tha thứ khi cần thiết nhưng đừng đủ lâu để ta quên mất mình là ai.
+
+Thật tuyệt nếu một ngày bạn bắt đầu với một nốt nhỏ thành công. bằng việc hoàn thành ==chứng chỉ tiền gửi cho sức khỏe== của bạn. Mỗi ngày bạn tập luyện là một ngày sức khỏe của bạn phải cám ơn bạn. tài khoản ngân hàng sức khỏe của bạn đã đỡ trượt dốc không phanh và ít nhất là không hụt vốn.
+
+
+
