--- a/docs/post/2025-01-01.md
+++ b/docs/post/2025-01-01.md
@@ -1,2 +1,13 @@
+---
+title: 1.Jan.2025
+aliases: 
+tags: 
+date: 2025-01-01
+url: 
+author: 
+Releated:
+---
+
+
 ![](https://i.imgur.com/j68RxIc.png)
 ![](https://i.imgur.com/TX0oUZz.png)
