--- a/docs/post/2025-01-02.md
+++ b/docs/post/2025-01-02.md
@@ -1,3 +1,14 @@
+---
+title: 2.JAN.2025
+aliases: 
+tags: 
+date: 2025-01-02
+url: 
+author: 
+Releated:
+---
+
+
 ![|300](https://i.imgur.com/nSLvYOH.png#center)
 ---
 ![|300](https://i.imgur.com/y88o5B9.png#center)
