--- a/docs/post/2025-01-07.md
+++ b/docs/post/2025-01-07.md
@@ -5,4 +5,10 @@ Sống tích cực vui vẻ, không cho phép mình làm tổn thương người
 
 Mình sống hiên ngang bằng khả năng và thực lực, không tránh khỏi những lúc va chạm. không phải một người hoàn hảo nên không cần quá cầu toàn về chính mình.
 
-Sống vị tha, hiền hậu, nhân ái. nhưng đừng bi lụy. cũng đừng tách rời tập thể
+Sống vị tha, hiền hậu, nhân ái. nhưng đừng bi lụy. cũng đừng tách rời tập thể.
+
+Nói chậm lại để hiểu mình, hiểu người.
+
+Tuy mình đúng nhưng ở góc nhìn của người khác sẽ khác đi. đừng nghĩ ai họ cũng như mình.
+
+nói nhiều, chỉ là thể hiện sự thiếu tự tin ở bên trong.
