--- a/docs/post/2025-01-10.md
+++ b/docs/post/2025-01-10.md
@@ -1,2 +1,2 @@
 ![](https://i.imgur.com/sPJxAtb.png)
-[[Saving water in the driest place on Earth]]
+# [[Saving-water- in-the-driest-place-on-Earth]]
